tests/integration/screens/snapshots/r#mod__integration__screens__typing_screen_test__typing_screen_snapshot_dialog_skip.snap
---
source: tests/integration/screens/typing_screen_test.rs
expression: output
---
                                                                                                                        
 ┌Challenge───────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ test.rs:1-1 [Rust] [Easy]                                                                                          │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
 ┌Code────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                               Press [SPACE] to start                                               │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 │                                                                                                                    │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
 ┌Metrics─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │ WPM: 0 | CPM: 0 | Accuracy: 0% | Mistakes: 0 | Streak: 0 | Time: 0s | Skips: 3                                     │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
 ┌Progress────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ 
 │                                                         0%                                                         │ 
 └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ 
 [ESC] Options
